# M4Baker

./: .gitignore  LICENSE  README.md  TODO.md  build.sh  clean.sh  images.sh  m4baker.spec  m4baker.wxg  pyproject.toml  register_extension.sh  requirements.txt  revised.sh  set_revised.pyw  tag.sh  version.py  wxglade.sh
design/: QueuePanel.wxg  m4baker.wxg  m4baker_single_page.wxg  m4baker_single_page_1.wxg
images/: README.md
poc/: QueuePoc.py  pnl_based.py
poc/resource/: Jonathan-Rey-Star-Wars-Characters-Yoda-01.icns
src/: m4baker.py  set_revised.pyw
src/ivonet/: IniFile.py  __init__.py  defines.py
src/ivonet/book/: __init__.py  genre.py  meta.py
src/ivonet/events/: EventEmitter.py  __init__.py  custom.py  defines.py
src/ivonet/gui/: AudiobookEntryPanel.py  AudiobookMetaDataPanel.py  ConverArtDropTarget.py  CoverArtDropTarget.py  CoverArtStaticBitmap.py  LogPanel.py  MP3DropTarget.py  MP3FilePanel.py  MP3FileTarget.py  MainFrame.py  MainPanel.py  MainWindow.py  MenuBar.py  MetadataPanel.py  NoteBook.py  QueuePanel.py  TMP_MP3DropTarget.py  __init__.py  main.py
src/ivonet/image/: IvoNetArtProvider.py  __init__.py  defines.py  images.py
src/ivonet/io/: UniqueName.py  __init__.py  ffprobe.py  save.py  walk.py
src/ivonet/model/: Audiobook.py  Project.py  Track.py  __init__.py
src/ivonet/sys/: __init__.py  application.py
src/ivonet/threading/: ProjectConverterWorker.py  __init__.py
src/resources/: LICENSE.AtomicParsley  README.md
test/: README.md  m4baker_tests.py
wxFormBuilder/: M4Baker.fbp
wxFormBuilder/Projects/: M4Baker.fbp
