[tool.poetry]
name = "m4baker"
version = "0.1.0"
description = "MP3 2 Audiobook converter"
authors = ["Ivo Woltring <ivo@ivonet.nl>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"
pyobjc = "^7.1"
tinytag = "^1.5.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"
briefcase = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
